# prueba

./: CMakeLists.txt  fichero.py
ca/: kup.po
ca/akonadi-import-wizard/: akonadi-import-wizard._json_.po  akonadiimportwizard.po
ca/akonadi-mime/: libakonadi-kmime5.po
ca/akonadi-phabricator-resource/: akonadi-phabricator-resource._desktop_.po
ca/akonadiclient/: akonadiclient.po
ca/akonadiconsole/: akonadiconsole._desktop_.po
ca/akregator/: akregator._desktop_.po
ca/alkimia/: alkimia._desktop_.po  onlinequoteseditor.po
ca/alligator/: alligator.po
ca/amarok/: amarok.po  amarokcollectionscanner_qt.po
ca/amor/: amor._desktop_.po
ca/angelfish/: org.kde.angelfish.metainfo.po
ca/ark/: ark._json_.po  ark.po
ca/arkade/: arkade._desktop_.po  org.kde.arkade.appdata.po
ca/atelier/: atelier._desktop_.po  org.kde.atelier.appdata.po
ca/audex/: audex._desktop_.po  org.kde.audex.appdata.po
ca/audiocd-kio/: kcmaudiocd.po  kio_audiocd.po  org.kde.kio_audiocd.metainfo.po
ca/aura-browser/: aura-browser._desktop_.po
ca/baloo/: baloo._desktop_.po  baloosearch5.po  balooshow5.po
ca/bluedevil/: bluedevil_xml_mimetypes.po  plasma_applet_org.kde.plasma.bluetooth.po
ca/breeze/: breeze_style_config.po
ca/breeze-icons/: breeze-icons._desktop_.po
ca/buho/: buho.po
ca/calendarsupport/: calendarsupport._desktop_.po
ca/calindori/: org.kde.calindori.appdata.po
ca/calligra/: calligra-opener.po  calligra.po  calligra_semanticitem_event.po  calligra_shape_chart.po  calligra_shape_spreadsheet.po  calligra_shape_text.po  calligra_shape_vector.po  calligra_shape_video.po  calligrafilters.po  calligrawords.po  org.kde.braindump.appdata.po  org.kde.calligrastage.appdata.po  org.kde.calligrawords.appdata.po
ca/calligraplan/: calligraplan_scheduler_tj.po  krossmoduleplan.po
ca/cantor/: cantor._desktop_.po  cantor._json_.po  org.kde.cantor.appdata.po
ca/cervisia/: cervisia._desktop_.po  cervisia.po
ca/choqok/: choqok.po  org.kde.choqok.appdata.po
ca/colord-kde/: colord-kde._desktop_.po
ca/discover/: discover._desktop_.po  kcm_updates.po  org.kde.discover.flatpak.appdata.po  plasma-discover.po
ca/dolphin/: dolphin.po  org.kde.dolphin.appdata.po
ca/dolphin-plugins/: dolphin-plugins._json_.po
ca/dragon/: dragonplayer.po  org.kde.dragonplayer.appdata.po
ca/drkonqi/: drkonqi5.po
ca/drkonqi-pk-debug-installer/: drkonqi-pk-debug-installer.po
ca/elf-dissector/: elf-dissector._desktop_.po
ca/falkon/: falkon_autoscroll_qt.po  falkon_mousegestures_qt.po  falkon_pim_qt.po  falkon_statusbaricons_qt.po  falkon_tabmanager_qt.po
ca/gcompris/: gcompris_lang.po
ca/granatier/: granatier.po
ca/gwenview/: gwenview._json_.po  org.kde.gwenview.appdata.po
ca/haruna/: haruna._desktop_.po  haruna.po
ca/heaptrack/: heaptrack.po  org.kde.heaptrack.appdata.po
rsrc/: 10-robolliurex.rules  CMakeLists.txt  robolliurex.desktop
src/: CMakeLists.txt  main.cpp  robocore.cpp  robocore.h  robolliurex.h  robomenus.cpp  robomenus.h  robopilot.cpp  robopilot.h  roboslot.cpp  roboslot.h  robowidgets.cpp  robowidgets.h  rsrcmanager.cpp  rsrcmanager.h
svg/: CMakeLists.txt
(+1922 files in other folders)
